--- a/schedule/week_2/Integrating_tokenization_and_normalization.ipynb
+++ b/schedule/week_2/Integrating_tokenization_and_normalization.ipynb
@@ -53,11 +53,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('Hello,', 'hello,'), ('Mom!', 'mom!')]\n"
+     ]
+    }
+   ],
    "source": [
     "def tokenize(input): # tokenize on white space\n",
     "    return input.split()\n",
@@ -81,11 +89,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('Hello', 'NN')]\n",
+      "[(',', ',')]\n",
+      "[('Mom', 'NN')]\n",
+      "[('!', '.')]\n",
+      "[[('Hello', 'NN')], [(',', ',')], [('Mom', 'NN')], [('!', '.')]]\n"
+     ]
+    }
+   ],
    "source": [
     "import nltk\n",
     "\n",
@@ -99,8 +119,8 @@
     "\n",
     "sample = \"Hello, Mom!\"\n",
     "tokens = tokenize(sample)\n",
-    "# print(tokens)\n",
-    "normalized = [normalize(token) for token in tokens]\n",
+    "# print(tokens) #tokens is list of indiv tokens\n",
+    "normalized = [normalize(token) for token in tokens] #normalize function as pos\n",
     "print(normalized)"
    ]
   },
@@ -113,13 +133,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'etree' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-d08505862293>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mre\u001b[0m \u001b[0;31m#must import re module to DO RegEx\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/GitHub/galaxy/srcs/text-02-1951.txt'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'utf-8'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mgalaxy\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0metree\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mtokenize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;31m# use NLTK word tokenization\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'etree' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "import re\n",
+    "import re #must import re module to DO RegEx\n",
+    "with open('/GitHub/galaxy/srcs/text-02-1951.txt', encoding='utf-8') as f:\n",
+    "    galaxy = etree.parse(f)\n",
     "\n",
     "def tokenize(input): # use NLTK word tokenization\n",
     "    return nltk.word_tokenize(input)\n",
@@ -127,12 +161,22 @@
     "def normalize(input): # normalize as POS\n",
     "    return (input, re.sub('[AEIOUaeiou]','',input))\n",
     "\n",
-    "sample = \"Hello, Mom!\"\n",
-    "tokens = tokenize(sample)\n",
+    "# sample = \"Hello, Mom!\"\n",
+    "# tokens = tokenize(sample)\n",
+    "tokens = tokenize(myfile)\n",
     "# print(tokens)\n",
     "normalized = [normalize(token) for token in tokens]\n",
     "print(normalized)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
