--- a/schedule/week_2/Near_matching.ipynb
+++ b/schedule/week_2/Near_matching.ipynb
@@ -38,11 +38,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+-----+------+------+-------+\n",
+      "| A | The | gray | -    | koala |\n",
+      "| B | The | big  | grey | koala |\n",
+      "+---+-----+------+------+-------+\n"
+     ]
+    }
+   ],
    "source": [
     "from collatex import *\n",
     "collation = Collation()\n",
@@ -54,11 +65,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+-----+-----+------+-------+\n",
+      "| A | The | -   | gray | koala |\n",
+      "| B | The | big | grey | koala |\n",
+      "+---+-----+-----+------+-------+\n"
+     ]
+    }
+   ],
    "source": [
     "from collatex import *\n",
     "collation = Collation()\n",
@@ -81,11 +103,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import Levenshtein\n",
     "Levenshtein.distance('gray', 'grey')"
@@ -100,11 +133,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Levenshtein.distance('gray','Grey')"
    ]
@@ -118,11 +162,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "print(Levenshtein.distance('color','colour'))\n",
     "print(Levenshtein.distance('clod', 'cloud'))"
@@ -137,11 +190,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "print(Levenshtein.distance('book', 'books'))\n",
     "print(Levenshtein.distance('book', 'cook'))"
