working on tokenization 07/20

--- a/schedule/week_2/collation/tokenization_normalization_collation.ipynb
+++ b/schedule/week_2/collation/tokenization_normalization_collation.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -114,7 +114,7 @@
     "\n",
     "witness_list = []\n",
     "witness_list.append({\"id\": \"A\", \"tokens\": tokenize(A_content)})\n",
-    "\n",
+    "# print(witness_list)\n",
     "json_input = {\"witnesses\": witness_list}\n",
     "print(json_input)"
    ]
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
